# FUSION-AI-Enterprise-Suite-AI-Driven-modular-ERP-Platform

./: .gitignore  ACCOUNTING_MODULE_SUMMARY.md  AI_Implementation_Checklist.md  CHANGELOG.md  DEPLOYMENT_READY_PLAN.md  DeploymentChecklist.md  INVOICING_MODULE_SUMMARY.md  PHASE_1_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml
backend/: CROSS_MODULE_INTEGRATION_GUIDE.md  Dockerfile  create_accounting_tables.py  create_documents_tables.py  create_hr_tables.py  create_inventory_tables.py  create_invoicing_tables.py  create_project_tables.py  create_sales_tables.py  init_db.py  invoicing_main.py  minimal_app.py  pyproject.toml  pytest.ini  requirements-simple.txt  requirements.txt  seed_invoicing_demo.py  simple_main.py  start_servers.py  test_accounting.py  test_accounting_service.py  test_minimal_app.py  test_server.py
backend/migrations/: 001_contact_activities.sql  001_smart_contact_system.sql  002_contact_hub.sql  003_accounting.sql  004_invoicing.sql
backend/src/: __init__.py  main.py
backend/src/agents/: base.py  orchestrator.py
backend/src/agents/specialized/: __init__.py  accounting.py  crm.py  helpdesk.py  hr.py  inventory.py  manufacturing.py  marketing.py  project.py  purchase.py  sales.py
backend/src/api/v1/: router.py
backend/src/core/: __init__.py  auth.py  config.py  contact_tracker.py  cross_module_integration.py  database.py  decorators.py  exceptions.py  global_metrics.py  middleware.py  qdrant.py  redis.py  websocket.py  websocket_server.py
backend/src/modules/accounting/: README.md  __init__.py  agents.py  ai_api.py  ai_services.py  api.py  models.py  schemas.py  service.py  test_api.py  test_service.py
backend/src/modules/contact_hub/: __init__.py  agents.py  ai_api.py  api.py  integration.py  integration_api.py  models.py  schemas.py  security.py  service.py  test_api.py  test_contact_hub.py
backend/src/modules/crm/: __init__.py  agents.py  api.py  api_new.py  models.py  schemas.py  service.py  services.py
backend/src/modules/dashboard/: agents.py  agents_simple.py  api.py  api_simple.py  models.py  services.py
backend/src/modules/documents/: agents.py  api.py  models.py  schemas.py  service.py  services.py
backend/src/modules/helpdesk/: __init__.py  api.py  models.py  schemas.py  service.py
backend/src/modules/hr/: __init__.py  agents.py  api.py  models.py  schemas.py  service.py
backend/src/modules/inventory/: __init__.py  agents.py  api.py  models.py  schemas.py  service.py
backend/src/modules/invoicing/: README.md  __init__.py  api.py  models.py  schemas.py  service.py  test_api.py  test_service.py
backend/src/modules/manufacturing/: __init__.py  api.py  models.py  schemas.py  service.py
backend/src/modules/pos/: __init__.py  api.py  models.py  schemas.py  service.py
backend/src/modules/project/: __init__.py  api.py  (+5 more)
backend/tests/: conftest.py  test_api.py  test_dashboard.py
(+174 files in other folders)
